# P3GC-Tatooine

./: Cargo.toml  README.md  desktop.ini
src/: camera.rs  color.rs  cube.rs  framebuffer.rs  light.rs  main.rs  material.rs  plane.rs  ray_intersect.rs  render.rs  skybox.rs  sphere.rs  texture.rs
