[package]
name = "P3GC-Tatooine"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.33.0"      # Biblioteca para operaciones matemáticas
nalgebra-glm = "0.19.0"      # Extensión para operaciones de gráficos
rayon = "1.5"
image = "0.25.2" 
minifb = "0.27.0"        # Biblioteca para la ventana y el framebuffer
rand = "0.8"  # or the latest version
once_cell = "1.20.1"
